# landscape_steiner

./: 0.2-grid_landscape.ipynb  0.3-grid_hierarchy.ipynb  0.4-optimization.ipynb  0.4-stp_parser_demo.ipynb  0.5-optimization.ipynb  0.6-stp_parser_generate_instances.ipynb  CHANGELOG.md  Makefile  README.md  der_4.py  environment.lock.yml  environment.yml  grid_landscape.ipynb  landscape.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  steiner_landscape.ipynb  steiner_timing.ipynb  steiner_utils.py  stp_parser.py  test.text
.github/workflows/: bumpversion.yml
data/raw/ES10FST/: es10fst01.stp  es10fst02.stp
documentation/: landscape_for_trees.tex
notebooks/: 0.2-grid_landscape.ipynb  0.3-grid_hierarchy.ipynb  0.4-stp_parser_demo.ipynb  0.6-stp_parser_generate_instances.ipynb
src/mpcstb/: landscape.py  steiner_utils.py  stp_parser.py
