[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
# Some sane defaults for the code style checker flake8
exclude =
    .git,
    __pycache__,
    .tox
    build
    dist
    .eggs
    docs/conf.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
files=mpcstb,tests
ignore_missing_imports = True

[tool:pytest]
testpaths=tests/
addopts =
    --cov
    --verbose
norecursedirs =
    dist
    build
    .tox

[metadata]
project_name     = mpcstb
package_name     = mpcstb
version          = 0.1.0
url              = https://github.com/pareyesv/landscape_steiner
github_url       = https://github.com/pareyesv/landscape_steiner
license          =
author_name      = Patricio Reyes
author_email     = patricio.reyes@bsc.es
description      = Landscape Multi-Period Steiner Tree Problem
